Update event times for 2017, add hours to both main promo pages, fix nav dropdown on mobile

--- a/app/styles/components/_main-nav.scss
+++ b/app/styles/components/_main-nav.scss
@@ -36,6 +36,7 @@
     &.dropdown.open {
       .nav-link {
         background: $bm-gray-lighter;
+        color: $body-color;
       }
     }
   }
@@ -46,6 +47,10 @@
 
     &:hover {
       color: $brand-primary;
+    }
+
+    &.active {
+      color: $body-color;
     }
 
     @include media-breakpoint-down(md) {
@@ -72,6 +77,11 @@
       &:hover {
         background-color: $bm-gray-lightest;
         color: $brand-primary;
+      }
+
+      &.active {
+        background-color: $bm-gray-lightest;
+        color: $body-color;
       }
     }
   }
