--- a/app/styles/pages/_index.scss
+++ b/app/styles/pages/_index.scss
@@ -6,7 +6,7 @@
   margin-bottom: 135px;
 
   @include media-breakpoint-down(md) {
-    height: 525px;
+    height: 585px;
     margin-bottom: $height-md;
   }
 }
